<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="fragmentHome"
            type="local.to.popcornmovies.fragments.home.Home" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.home.Home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/search_input_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/search_edit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/search"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:onClick="@{()->fragmentHome.onSearchButtonClick()}"
                    android:contentDescription="@string/search_button_content_description"
                    android:src="@drawable/baseline_search_24"
                    tools:src="@drawable/baseline_search_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_result_list_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_input_container"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/search_header_text_view"
                        style="@style/TextViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searching" />

                    <include
                        android:id="@+id/searching_loader"
                        layout="@layout/three_dots_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_result_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/search_result_card" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/anime_search_result_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/anime_search_result_card" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/trending_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_result_list_container">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextViews"
                        android:layout_height="wrap_content"
                        android:text="@string/trending" />

                    <include
                        android:id="@+id/trending_loader"
                        layout="@layout/three_dots_loader"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trending_result_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/trending_result_card" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wish_list_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trending_container"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/wish_header_text_view"
                    style="@style/TextViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wish_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wish_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/wish_result_card" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/anime_wish_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="10"
                    tools:listitem="@layout/anime_wish_result_card" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>